build: add jest and test cases

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,10 @@
     "target": "esnext",
     "module": "esnext",
     "lib": ["esnext", "dom"],
-    "outDir": "lib",
+    "outDir": "dist",
     "declaration": true,
     "declarationMap": true,
-    "emitDeclarationOnly": true,
+    // "emitDeclarationOnly": true,
     "declarationDir": "types",
     "moduleResolution": "node",
     "esModuleInterop": true,
