--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "A collection of mathematical constants and functions implemented by JavaScript and TypeScript (ESNext)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint --ignore-path .gitignore \"**/*+(ts|js)\"",
+    "format": "prettier --ignore-unknown \"**/*\"",
+    "test": "jest -converage",
+    "build": "rm -rf dist types && tsc"
   },
   "repository": {
     "type": "git",
@@ -17,12 +20,15 @@
   },
   "homepage": "https://github.com/shenlu89/math-spec#readme",
   "devDependencies": {
+    "@types/jest": "^27.0.2",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
     "eslint": "^8.1.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^27.3.1",
     "prettier": "^2.4.1",
+    "ts-jest": "^27.0.7",
     "typescript": "^4.4.4"
   }
 }
